--- a/nginx.conf
+++ b/nginx.conf
@@ -11,6 +11,14 @@ http {
   # we want to include a mime.types files as a replacement for `types context`
   include mime.types;
 
+  # available servers
+  upstream backendserver {
+    server 127.0.0.1:1111;
+    server 127.0.0.1:2222;
+    server 127.0.0.1:3333;
+    server 127.0.0.1:4444;
+  }
+
   server {
     listen 8080;
     root /Users/chen/go/src/github.com/tjcchen/nginx;
@@ -18,6 +26,11 @@ http {
     # rewrite: redirect without changing url
     # eg: /number/3 will display the content of /count/3
     rewrite ^/number/(\w+) /count/$1;
+
+    # load balancer config
+    location / {
+      proxy_pass http://backendserver/;
+    }
 
     # match router `/count/3` with RegExp
     location ~* /count/[0-9] {
